--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <img src="images/slider3.JPG" alt="...">
+                                    <img src="images/slider3.jpg" alt="...">
                                     <div class="carousel-caption">
                                         
                                     </div>
