--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="col-md-6">
                     <h1>Acerca de nosotros</h1>
                     <div class=""><svg viewBox="0 0 24 24" width="40" height="40" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 14.803v6.447c0 .414.336.75.75.75h1.614a.75.75 0 0 0 .74-.627L5.5 19h13l.395 2.373a.75.75 0 0 0 .74.627h1.615a.75.75 0 0 0 .75-.75v-6.447a5.954 5.954 0 0 0-1-3.303l-.78-1.17a1.994 1.994 0 0 1-.178-.33h.994a.75.75 0 0 0 .671-.415l.25-.5A.75.75 0 0 0 21.287 8H19.6l-.31-1.546a2.5 2.5 0 0 0-1.885-1.944C15.943 4.17 14.141 4 12 4c-2.142 0-3.943.17-5.405.51a2.5 2.5 0 0 0-1.886 1.944L4.399 8H2.714a.75.75 0 0 0-.67 1.085l.25.5a.75.75 0 0 0 .67.415h.995a1.999 1.999 0 0 1-.178.33L3 11.5c-.652.978-1 2.127-1 3.303zm15.961-4.799a4 4 0 0 0 .34.997H5.699c.157-.315.271-.65.34-.997l.632-3.157a.5.5 0 0 1 .377-.39C8.346 6.157 10 6 12 6c2 0 3.654.156 4.952.458a.5.5 0 0 1 .378.389l.631 3.157zM5.5 16a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM20 14.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" fill="#000000"></path></g></svg></div>
-                    <p class="desc-text">Somos los mejores en el mercado, hemos estado en la industria por mas de 15 años ofreciendo los mejores productos de calidad. Nos respalda un inumerable numero de clientes satisfechos y nuestro lema es "Lo que necesite, yo lo tengo". Visitanos o llamanos, estamos a tus ordenes.</p>
+                    <p class="desc-text">Somos los mejores en el mercado, hemos estado en la industria por mas de 15 años ofreciendo los mejores productos de calidad. Nos respalda un inumerable cantidad de clientes satisfechos y nuestro lema es "Lo que necesite, yo lo tengo". Visitanos o llamanos, estamos a tus ordenes.</p>
                 </div>
                 <div class="col-md-6">
                     <div class="img-section">
@@ -274,10 +274,10 @@
                                         <!-- Message -->
                                         <div class="right-text">
                                             <h2>Horario</h2><hr>
-                                            <p>Lune a Viernes: 8:0 AM - 6:00 PM</p>
+                                            <p>Lune a Viernes: 9:00 AM - 7:00 PM</p>
                                             <p>Sabados: 8:00 AM - 2:00 PM</p>                                            
                                             <p>Monday to Friday: 8:00 AM - 6:00 PM</p>
-                                            <p>Saturday: 8:00 PM - 2:00 PM</p>
+                                            <p>Saturday: 9:00 PM - 3:00 PM</p>
                                         </div>
                                     </div>
                                 </div>
@@ -358,7 +358,7 @@
         <footer class="sub_footer">
             <div class="container">
                 <div class="col-md-4"><p class="sub-footer-text text-center">&copy; Houston Autopartes, by <a href="https://Elseñorprogramador.com/">JCCM</a></p></div>
-                <div class="col-md-4"><p class="sub-footer-text text-center">Regresar <a href="#top">arriva</a></p>
+                <div class="col-md-4"><p class="sub-footer-text text-center">Regresar <a href="#top">arriba</a></p>
                 </div>
                 <div class="col-md-4"><p class="sub-footer-text text-center">Guadalajara Jal, <a href="#" target="_blank">Mexico</a></p></div>
             </div>
