--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
                                             <div class="col-xs-6 ">
                                                 <!-- Send Button -->
-                                                <button type="submit" id="submit" name="submit" class="text-center form-btn form-btn">Reserva</button> 
+                                                <button type="submit" id="submit" name="submit" class="text-center form-btn form-btn">Enviar</button> 
                                             </div>
                                             
                                         </div>
